@@ -178,7 +178,8 @@ define('_AM_XNEWSLETTER_CAT_ADD',"Add a category");
 define('_AM_XNEWSLETTER_CAT_EDIT',"Edit a category");
 define('_AM_XNEWSLETTER_CAT_DELETE',"Delete a category");
 define('_AM_XNEWSLETTER_CAT_ID',"Id");
-define('_AM_XNEWSLETTER_CAT_NAME',"Newsletter name");
+//define('_AM_XNEWSLETTER_CAT_NAME',"Newsletter name");
+define('_AM_XNEWSLETTER_CAT_NAME',"Category name");
 define('_AM_XNEWSLETTER_CAT_INFO',"Additional info");
 define('_AM_XNEWSLETTER_CAT_GPERMS_CREATE',"Permissions to create");
 define('_AM_XNEWSLETTER_CAT_GPERMS_CREATE_DESC',"<br /><span style='font-weight:normal'>- Create new newsletters<br />- Edit, delete, send of own newsletters</span>");
